--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,12 +3,14 @@ layout: null
 excluded_in_search: true
 ---
 
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
+@import url("https://fonts.googleapis.com/css2?family=Roboto");
 @import url("pygment_highlights.css");
 
 /* --- General --- */
 
 body {
-  font-family: 'Lora', 'Times New Roman', serif;
+  font-family: "Montserrat",sans-serif;
   font-size: 18px;
   color: #404040;
   position: relative;
@@ -21,7 +23,7 @@ p {
   margin: 30px 0;
 }
 h1,h2,h3,h4,h5,h6 {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 800;
 }
 a {
@@ -70,7 +72,7 @@ hr.small {
 }
 
 .main-explain-area {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Montserrat",sans-serif;
   padding: 15px inherit;
 }
 
@@ -121,7 +123,7 @@ img {
 .navbar-custom {
   background-color: {{ site.navbar-col }};
   border-bottom: 1px solid #EAEAEA;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Montserrat",sans-serif;
   {% if site.navbar-img %}
   background-image: url({{ site.navbar-img }});
   background-attachment: fixed;
@@ -303,7 +305,7 @@ footer .list-inline {
   padding: 0;
 }
 footer .copyright {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Montserrat",sans-serif;
   text-align: center;
   margin-bottom: 0;
 }
@@ -369,7 +371,7 @@ footer .theme-by {
   margin: 0 0 10px;
 }
 .post-preview .post-entry {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Montserrat",sans-serif;
 }
 .post-entry-container {
   display: inline-block;
@@ -406,7 +408,7 @@ footer .theme-by {
 /* --- Tags --- */
 
 .blog-tags {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Montserrat",sans-serif;
   color: #999;
   font-size: 15px;
   margin-bottom: 30px;
@@ -499,7 +501,7 @@ footer .theme-by {
   font-size: 27px;
   line-height: 1.1;
   display: block;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 300;
   margin: 10px 0 0;
 }
@@ -524,7 +526,7 @@ footer .theme-by {
   padding: 5px 10px;
   font-size: 11px;
   color: #EEE;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Montserrat",sans-serif;
   right: 0;
   bottom: 0;
   display: none;
@@ -608,7 +610,7 @@ footer .theme-by {
 /* --- Pager --- */
 
 .pager li a {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Montserrat",sans-serif;
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 800;
@@ -777,7 +779,8 @@ td.gutter {
 }
 
 #full-tags-list {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Montserrat",sans-serif;
+
 }
 
 #full-tags-list .tag-entry {
