--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,14 +3,13 @@ layout: null
 excluded_in_search: true
 ---
 
-@import url("https://fonts.googleapis.com/css?family=Montserrat");
 @import url("https://fonts.googleapis.com/css2?family=Roboto");
 @import url("pygment_highlights.css");
 
 /* --- General --- */
 
 body {
-  font-family: "Montserrat",sans-serif;
+  font-family: "Roboto",sans-serif;
   font-size: 18px;
   color: #404040;
   position: relative;
@@ -72,7 +71,7 @@ hr.small {
 }
 
 .main-explain-area {
-  font-family: "Montserrat",sans-serif;
+  font-family: "Roboto",sans-serif;
   padding: 15px inherit;
 }
 
@@ -123,7 +122,7 @@ img {
 .navbar-custom {
   background-color: {{ site.navbar-col }};
   border-bottom: 1px solid #EAEAEA;
-  font-family: "Montserrat",sans-serif;
+  font-family: "Roboto",sans-serif;
   {% if site.navbar-img %}
   background-image: url({{ site.navbar-img }});
   background-attachment: fixed;
@@ -305,7 +304,7 @@ footer .list-inline {
   padding: 0;
 }
 footer .copyright {
-  font-family: "Montserrat",sans-serif;
+  font-family: "Roboto",sans-serif;
   text-align: center;
   margin-bottom: 0;
 }
@@ -371,7 +370,7 @@ footer .theme-by {
   margin: 0 0 10px;
 }
 .post-preview .post-entry {
-  font-family: "Montserrat",sans-serif;
+  font-family: "Roboto",sans-serif;
 }
 .post-entry-container {
   display: inline-block;
@@ -408,7 +407,7 @@ footer .theme-by {
 /* --- Tags --- */
 
 .blog-tags {
-  font-family: "Montserrat",sans-serif;
+  font-family: "Roboto",sans-serif;
   color: #999;
   font-size: 15px;
   margin-bottom: 30px;
@@ -526,7 +525,7 @@ footer .theme-by {
   padding: 5px 10px;
   font-size: 11px;
   color: #EEE;
-  font-family: "Montserrat",sans-serif;
+  font-family: "Roboto",sans-serif;
   right: 0;
   bottom: 0;
   display: none;
@@ -610,7 +609,7 @@ footer .theme-by {
 /* --- Pager --- */
 
 .pager li a {
-  font-family: "Montserrat",sans-serif;
+  font-family: "Roboto",sans-serif;
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 800;
@@ -779,7 +778,7 @@ td.gutter {
 }
 
 #full-tags-list {
-  font-family: "Montserrat",sans-serif;
+  font-family: "Roboto",sans-serif;
 
 }
 
