--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -145,7 +145,7 @@ img {
 .navbar-custom .navbar-brand:focus ,
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
-  color: {{ site.navbar-hover-col }};
+  color: {{ site.hover-col }};
 }
 
 .navbar-custom .navbar-brand-logo {
@@ -297,10 +297,6 @@ footer p.text-muted {
 
 footer a {
   color: {{site.footer-link-col}};
-}
-
-footer:hover {
-  color: {{site.footer-hover-col}};
 }
 
 footer .list-inline {
